--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="calc.css">
 </head>
 <body>
+    <h1>Web Calculator</h1>
     <section>     <!-- Main container -->  
         <input type="text" id="display" placeholder="123">
 
